--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
             <artifactId>javax.json-api</artifactId>
             <version>1.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.17</version>
+        </dependency>
     </dependencies>
 
     <build>
