--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>net.lldp.checksims</groupId>
     <artifactId>checksims</artifactId>
-    <version>1.3.0</version>
+    <version>3.0</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -153,6 +153,20 @@
                             </archive>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>TCONV</id>
+                        <goals><goal>jar</goal></goals>
+                        <phase>package</phase>
+                        <configuration>
+                            <classifier>TCONV</classifier>
+                            <archive>
+                                <manifest>
+                                    <addClasspath>true</addClasspath>
+                                    <mainClass>net.lldp.checksims.ui.download.TurninConverter</mainClass>
+                                </manifest>
+                            </archive>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
             <plugin>
@@ -189,6 +203,20 @@
                             <archive>
                                 <manifest>
                                     <mainClass>net.lldp.checksims.ChecksimsRunner</mainClass>
+                                </manifest>
+                            </archive>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>TurninConverter</id>
+                        <phase>package</phase>
+                        <goals><goal>single</goal></goals>
+                        <configuration>
+                            <classifier>TCONV</classifier>
+                            <finalName>${project.artifactId}-${project.version}-TURNIN-CONVERTER</finalName>
+                            <archive>
+                                <manifest>
+                                    <mainClass>net.lldp.checksims.ui.download.TurninConverter</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
